[gd_scene load_steps=6 format=3 uid="uid://l5rtkseiyghf"]

[ext_resource type="Script" path="res://scenes/tools/prefixes_script.gd" id="1_08l3q"]
[ext_resource type="Texture2D" uid="uid://k4h6virvlxnm" path="res://icons/prefix_icon.svg" id="2_ln6ms"]
[ext_resource type="Theme" uid="uid://u13wuypqagrc" path="res://style/table_theme.tres" id="2_n7ha8"]
[ext_resource type="Texture2D" uid="uid://bnev4omaxber3" path="res://icons/arrow_icon.svg" id="3_xvpu6"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ncda2"]

[node name="PrefixesMain" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_08l3q")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2
alignment = 2

[node name="CreateAliasBtn" type="Button" parent="HBoxContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
tooltip_text = "New Prefix"
icon = ExtResource("2_ln6ms")
flat = true

[node name="AliasTree" type="Tree" parent="."]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("2_n7ha8")
columns = 2
column_titles_visible = true
allow_reselect = true
hide_folding = true
hide_root = true

[node name="HSeparator" type="HSeparator" parent="."]
layout_mode = 2

[node name="TestContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="TestLineEdit" type="LineEdit" parent="TestContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 4.0
placeholder_text = "Test Prefix"

[node name="TestPrefixBtn" type="Button" parent="TestContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Test"

[node name="TextureRect" type="TextureRect" parent="TestContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
texture = ExtResource("3_xvpu6")
expand_mode = 1
stretch_mode = 5

[node name="PanelContainer" type="PanelContainer" parent="TestContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 6.0
theme_override_styles/panel = SubResource("StyleBoxEmpty_ncda2")

[node name="TestPrefixLbl" type="Label" parent="TestContainer/PanelContainer"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
vertical_alignment = 1
text_overrun_behavior = 3
